--- a/src/components/game/Game.module.css
+++ b/src/components/game/Game.module.css
@@ -8,9 +8,10 @@
   display: flex;
   gap: 30px;
   align-items: center;
+  margin-bottom: 20px;
 }
 
-@media screen (max-width: 425px) {
+@media screen and (max-width: 425px) {
     .gameContent {
       flex-direction: column;
     }
